Added changes in class

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 .ipynb_checkpoints/Python_Introduction-checkpoint.ipynb
 .vscode/settings.json
+core/.ipynb_checkpoints/Python Dictionaries-checkpoint.ipynb
+core/.ipynb_checkpoints/Python Variables and Data Types-checkpoint.ipynb
