Added changes to Sets and Tuples

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 .vscode/settings.json
 core/.ipynb_checkpoints/Python Dictionaries-checkpoint.ipynb
 core/.ipynb_checkpoints/Python Variables and Data Types-checkpoint.ipynb
+core/.ipynb_checkpoints/Python Sets-checkpoint.ipynb
+core/.ipynb_checkpoints/Python Tuples-checkpoint.ipynb
