--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ core/.ipynb_checkpoints/Python Dictionaries-checkpoint.ipynb
 core/.ipynb_checkpoints/Python Variables and Data Types-checkpoint.ipynb
 core/.ipynb_checkpoints/Python Sets-checkpoint.ipynb
 core/.ipynb_checkpoints/Python Tuples-checkpoint.ipynb
+NumPy/.ipynb_checkpoints/Python NumPy-checkpoint.ipynb
