--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ core/.ipynb_checkpoints/Python Variables and Data Types-checkpoint.ipynb
 core/.ipynb_checkpoints/Python Sets-checkpoint.ipynb
 core/.ipynb_checkpoints/Python Tuples-checkpoint.ipynb
 NumPy/.ipynb_checkpoints/Python NumPy-checkpoint.ipynb
+Pandas/.ipynb_checkpoints/Python Pandas Tutorial-checkpoint.ipynb
+NumPy/tree1.txt
