--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ core/.ipynb_checkpoints/Python Tuples-checkpoint.ipynb
 NumPy/.ipynb_checkpoints/Python NumPy-checkpoint.ipynb
 Pandas/.ipynb_checkpoints/Python Pandas Tutorial-checkpoint.ipynb
 NumPy/tree1.txt
+WebScraping/imanta.xlsx
+WebScraping/maskavas_pardod.xlsx
+WebScraping/maskavas-priekshpilseta.xlsx
+WebScraping/__pycache__/util.cpython-38.pyc
+WebScraping/.ipynb_checkpoints/Apartments-checkpoint.ipynb
+WebScraping/.ipynb_checkpoints/Reading Scrapy JSON-checkpoint.ipynb
