Generators in Class 13.11.2020

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ WebScraping/maskavas-priekshpilseta.xlsx
 WebScraping/__pycache__/util.cpython-38.pyc
 WebScraping/.ipynb_checkpoints/Apartments-checkpoint.ipynb
 WebScraping/.ipynb_checkpoints/Reading Scrapy JSON-checkpoint.ipynb
+core/.ipynb_checkpoints/Python Generators-checkpoint.ipynb
