--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ WebScraping/__pycache__/util.cpython-38.pyc
 WebScraping/.ipynb_checkpoints/Apartments-checkpoint.ipynb
 WebScraping/.ipynb_checkpoints/Reading Scrapy JSON-checkpoint.ipynb
 core/.ipynb_checkpoints/Python Generators-checkpoint.ipynb
+Visualization/.ipynb_checkpoints/Matplotlib_in_class-checkpoint.ipynb
+Visualization/.ipynb_checkpoints/Mandelbrot_Matplotlib-checkpoint.ipynb
+Visualization/.ipynb_checkpoints/Matplotlib in Jupyter-checkpoint.ipynb
+Visualization/.ipynb_checkpoints/Matplotlib_full_example-checkpoint.ipynb
