--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ Visualization/.ipynb_checkpoints/Matplotlib_in_class-checkpoint.ipynb
 Visualization/.ipynb_checkpoints/Mandelbrot_Matplotlib-checkpoint.ipynb
 Visualization/.ipynb_checkpoints/Matplotlib in Jupyter-checkpoint.ipynb
 Visualization/.ipynb_checkpoints/Matplotlib_full_example-checkpoint.ipynb
+Visualization/.ipynb_checkpoints/Plotly 4_in_class-checkpoint.ipynb
+Visualization/.ipynb_checkpoints/Plotly_Scatter_plot-checkpoint.ipynb
+Visualization/.ipynb_checkpoints/Throw some dice-checkpoint.ipynb
