--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ Visualization/.ipynb_checkpoints/Matplotlib_full_example-checkpoint.ipynb
 Visualization/.ipynb_checkpoints/Plotly 4_in_class-checkpoint.ipynb
 Visualization/.ipynb_checkpoints/Plotly_Scatter_plot-checkpoint.ipynb
 Visualization/.ipynb_checkpoints/Throw some dice-checkpoint.ipynb
+core/.ipynb_checkpoints/Python Decorators and attr library-checkpoint.ipynb
