--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ Visualization/.ipynb_checkpoints/Plotly 4_in_class-checkpoint.ipynb
 Visualization/.ipynb_checkpoints/Plotly_Scatter_plot-checkpoint.ipynb
 Visualization/.ipynb_checkpoints/Throw some dice-checkpoint.ipynb
 core/.ipynb_checkpoints/Python Decorators and attr library-checkpoint.ipynb
+Machine_Learning_intro_scikit-learn/.ipynb_checkpoints/Irises Data Analysis Workflow_classwork_2020_12-checkpoint.ipynb
